Added links to the tools

--- a/program/index.html
+++ b/program/index.html
@@ -19,6 +19,7 @@
   <link href="/css/sbst.css" rel="stylesheet" />
   <link rel="stylesheet" href="/css/highlight.min.css">
   <link rel="stylesheet" href="/css/sbst.css">
+  <script src="https://kit.fontawesome.com/9886ceeb08.js" crossorigin="anonymous"></script>
 </head>
 
 
@@ -162,10 +163,11 @@
                       </td>
                     </tr>
                   </table>
+
                   <h2>Tool Competition</h2>
                   <table class="committee-table">
                     <tr>
-                      <td><a target="_blank">EvoSuite</a> <br>
+                      <td><a target="_blank" href="https://www.evosuite.org/"><i class="fas fa-link"></i> EvoSuite</a> <br>
                         <h3 class="paper-authors-accepted">Gordon Fraser</h3>
                       </td>
                     </tr>
@@ -185,28 +187,28 @@
                       </td>
                     </tr>
                     <tr>
-                      <td><a target="_blank">AdaFrenetic</a> <br>
+                      <td><a target="_blank" href="https://github.com/TayYim/adafrenetic-sbst22"><i class="fas fa-link"></i>AdaFrenetic</a> <br>
                         <h3 class="paper-authors-accepted">SongYang Yan, Ming Fan</h3>
                       </td>
                     </tr>
                     <tr>
-                      <td><a target="_blank">Dmytro Humeniuk</a> <br>
-                        <h3 class="paper-authors-accepted">AmbieGen</h3>
+                      <td><a target="_blank" href="https://github.com/dgumenyuk/tool-competition-av"><i class="fas fa-link"></i>AmbieGen</a> <br>
+                        <h3 class="paper-authors-accepted">Dmytro Humeniuk</h3>
                       </td>
                     </tr>
                     <tr>
-                      <td><a target="_blank">FeneticV</a> <br>
+                      <td><a target="_blank"  href="https://github.com/ERATOMMSD/tool-competition-av/tree/frenetic-sbst22"><i class="fas fa-link"></i>FeneticV</a> <br>
                         <h3 class="paper-authors-accepted">Ezequiel Castellano, Paolo Arcaini, Stefan Klikovits, Xiaoyi
                           Zhang, Ahmet Cetinkaya, CÉDRIC Ho Thanh</h3>
                       </td>
                     </tr>
                     <tr>
-                      <td><a target="_blank">GenRL</a> <br>
-                        <h3 class="paper-authors-accepted">AmbieGen</h3>
+                      <td><a target="_blank" href="https://github.com/luistar/tool-competition-av"><i class="fas fa-link"></i> GenRL</a> <br>
+                        <h3 class="paper-authors-accepted">Luigi Libero Lucio Starace, Andrea Romdhana, Sergio Di Martino</h3>
                       </td>
                     </tr>
                     <tr>
-                      <td><a target="_blank">EvoMBT</a> <br>
+                      <td><a target="_blank" href="https://github.com/chiakangZacHung/tool-competition-av"><i class="fas fa-link"></i> EvoMBT</a> <br>
                         <h3 class="paper-authors-accepted">Raihana Ferdous, Chia-kang Hung, Fitsum Meshesha Kifetew,
                           Davide Prandi and Angelo Susi</h3>
                       </td>
