Added more links

--- a/program/index.html
+++ b/program/index.html
@@ -167,22 +167,22 @@
                   <h2>Tool Competition</h2>
                   <table class="committee-table">
                     <tr>
-                      <td><a target="_blank" href="https://www.evosuite.org/"><i class="fas fa-link"></i> EvoSuite</a> <br>
+                      <td><a target="_blank" href="https://github.com/evosuite/EvoSuite"><i class="fas fa-link"></i> EvoSuite</a> <br>
                         <h3 class="paper-authors-accepted">Gordon Fraser</h3>
                       </td>
                     </tr>
                     <tr>
-                      <td><a target="_blank">Kex at the 2022 SBST Tool Competition</a> <br>
+                      <td><a target="_blank" href="https://github.com/vorpal-research/kex/tree/sbst2022"><i class="fas fa-link"></i> Kex at the 2022 SBST Tool Competition</a> <br>
                         <h3 class="paper-authors-accepted">Azat Abdullin, Marat Akhin, Mikhail Belyaev</h3>
                       </td>
                     </tr>
                     <tr>
-                      <td><a target="_blank">BBC</a> <br>
+                      <td><a target="_blank" href="https://github.com/pderakhshanfar/evosuite/tree/BBC"><i class="fas fa-link"></i> BBC</a> <br>
                         <h3 class="paper-authors-accepted">Xavier Devroey, Pouria Derakhshanfar</h3>
                       </td>
                     </tr>
                     <tr>
-                      <td><a target="_blank">UtBot & UtBot-Mocks</a> <br>
+                      <td><a target="_blank" href="https://github.com/UnitTestBothttps://github.com/UnitTestBot"><i class="fas fa-link"></i> UtBot & UtBot-Mocks</a> <br>
                         <h3 class="paper-authors-accepted">Dmitry Ivanov, Denis Fokin, Menshutin Alexey</h3>
                       </td>
                     </tr>
