--- a/index.html
+++ b/index.html
@@ -200,9 +200,11 @@
                   <!-- <p><b><del>Tuesday 12 January 2021</del></b></p> -->
                   <h6 class="text-primary">Notification to Authors</h6>
                   <p>Friday February 25 2022</p>
-                  <h6 class="text-primary">Camera Ready and Author's Registration Due</h6>
+                  <h6 class="text-primary">Camera Ready Due</h6>
                   <p><s>Sunday March 18 2022</s></p>
                   <p>Tuesday March 22 2022</p>
+                  <h6 class="text-primary">Author's Registration Due</h6>
+                  <p>Thursday March 31 2022</p>
                   <h5>Submission Guidelines</h5>
                   <p class="text-justify">All submissions must conform to the <a
                       href="https://conf.researchr.org/track/icse-2022/icse-2022-papers#Call-for-Papers">ICSE&rsquo;22
