Updated list of tools' authors and added special issue

--- a/index.html
+++ b/index.html
@@ -149,6 +149,25 @@
                     directions for future research, and to encourage the use of search
                     techniques in novel aspects of software testing in combination with
                     other aspects of the software engineering lifecycle.</p>
+                  <h4 class="subsection">Special Issue</h4>
+                  <p>
+                    We are please to announce that SBST'22 is hosting an <b>open call</b> special issue at the <a
+                      href="https://www.journals.elsevier.com/science-of-computer-programming" target="_blank">Science
+                      of Computer Programming Journal</a>, called <b>SBST'22: Search-Based Software Engineering -
+                      Tools</b>.
+                  </p>
+                  <p>
+                    Researchers and practitioners are invited to submit tools showcasing new or improved SBST
+                    approaches. It is important to mention that this call for original software does not publish papers
+                    accompanied by software but expects short papers supported by artifacts such as the original
+                    software described in the papers together with all the experimental packages, and other data needed
+                    for for sake of reproducibility. Hence, we invite submissions showing practical experience of using
+                    SBST techniques and tools.
+                  </p>
+                  <p>This is the perfect opportunity to showcase your tool. Use the following link for more information and submission instructions:
+                    <a href="https://www.journals.elsevier.com/science-of-computer-programming/call-for-software/sbst-22-search-based-software-engineering-tools"
+                      target="_blank">Science of Computer Programming Call</a>
+                  </p>
                   <h4 class="subsection">Call for Papers</h4>
                   <p>Researchers and practitioners are invited to submit:</p>
                   <ul>
@@ -179,7 +198,8 @@
                     optimization, particle swarm optimization, and multi-objective optimization.</p>
                   <h4 class="subsection">Sponsors</h4>
                   <br>
-                  <a href="https://www.google.com/" target="_blank"><img src="/img/google.png" alt="Google" class="img-fluid" width="250" /></a>
+                  <a href="https://www.google.com/" target="_blank"><img src="/img/google.png" alt="Google"
+                      class="img-fluid" width="250" /></a>
                 </div>
                 <div class="col-md-4">
                   <h4 class="subsection">Important Dates</h4>
@@ -214,7 +234,9 @@
                   <p><a
                       href="https://easychair.org/conferences/?conf=sbst2022">https://easychair.org/conferences/?conf=sbst2022</a>
                   </p>
-                  <a class="twitter-timeline" data-height="600" href="https://twitter.com/sbstworkshop?ref_src=twsrc%5Etfw">Tweets by sbstworkshop</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                  <a class="twitter-timeline" data-height="600"
+                    href="https://twitter.com/sbstworkshop?ref_src=twsrc%5Etfw">Tweets by sbstworkshop</a>
+                  <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
                 </div>
               </div>
             </div>
