--- a/program/index.html
+++ b/program/index.html
@@ -168,7 +168,7 @@
                   <table class="committee-table">
                     <tr>
                       <td><a target="_blank" href="https://github.com/evosuite/EvoSuite"><i class="fas fa-link"></i> EvoSuite</a> <br>
-                        <h3 class="paper-authors-accepted">Gordon Fraser</h3>
+                        <h3 class="paper-authors-accepted">Sebastian Schweikl, Gordon Fraser, Andrea Arcuri</h3>
                       </td>
                     </tr>
                     <tr>
@@ -178,12 +178,12 @@
                     </tr>
                     <tr>
                       <td><a target="_blank" href="https://github.com/pderakhshanfar/evosuite/tree/BBC"><i class="fas fa-link"></i> BBC</a> <br>
-                        <h3 class="paper-authors-accepted">Xavier Devroey, Pouria Derakhshanfar</h3>
+                        <h3 class="paper-authors-accepted">Pouria Derakhshanfar, Xavier Devroey</h3>
                       </td>
                     </tr>
                     <tr>
                       <td><a target="_blank" href="https://github.com/UnitTestBothttps://github.com/UnitTestBot"><i class="fas fa-link"></i> UtBot & UtBot-Mocks</a> <br>
-                        <h3 class="paper-authors-accepted">Dmitry Ivanov, Denis Fokin, Menshutin Alexey</h3>
+                        <h3 class="paper-authors-accepted">Dmitry Ivanov, Alexey Menshutin, Denis Fokin, Kamenev Yury, Sergey Pospelov, Egor Kulikov, Nikita Stroganov</h3>
                       </td>
                     </tr>
                     <tr>
@@ -193,13 +193,12 @@
                     </tr>
                     <tr>
                       <td><a target="_blank" href="https://github.com/dgumenyuk/tool-competition-av"><i class="fas fa-link"></i>AmbieGen</a> <br>
-                        <h3 class="paper-authors-accepted">Dmytro Humeniuk</h3>
+                        <h3 class="paper-authors-accepted">Dmytro Humeniuk, Giuliano Antoniol and Foutse Khomh </h3>
                       </td>
                     </tr>
                     <tr>
                       <td><a target="_blank"  href="https://github.com/ERATOMMSD/tool-competition-av/tree/frenetic-sbst22"><i class="fas fa-link"></i>FeneticV</a> <br>
-                        <h3 class="paper-authors-accepted">Ezequiel Castellano, Paolo Arcaini, Stefan Klikovits, Xiaoyi
-                          Zhang, Ahmet Cetinkaya, CÉDRIC Ho Thanh</h3>
+                        <h3 class="paper-authors-accepted">Ezequiel Castellano, Stefan Klikovits, Ahmet Cetinkaya, and Paolo Arcaini</h3>
                       </td>
                     </tr>
                     <tr>
@@ -209,8 +208,7 @@
                     </tr>
                     <tr>
                       <td><a target="_blank" href="https://github.com/chiakangZacHung/tool-competition-av"><i class="fas fa-link"></i> EvoMBT</a> <br>
-                        <h3 class="paper-authors-accepted">Raihana Ferdous, Chia-kang Hung, Fitsum Meshesha Kifetew,
-                          Davide Prandi and Angelo Susi</h3>
+                        <h3 class="paper-authors-accepted">Raihana Ferdous, Chia-kang Hung, Fitsum Meshesha Kifetew, Davide Prandi and Angelo Susi</h3>
                       </td>
                     </tr>
                     <tr>
