--- a/program/index.html
+++ b/program/index.html
@@ -314,6 +314,8 @@
                         <div class="section section-team text-center">
                             <div class="container">
                                 <h2 class="subtitle text-center">Workshop Program</h2>
+                                <p>All times in Central European Summer Time (CEST) - UTC+2</p>
+                                <br>
                             </div>
 
                             <table class="schedule">
