--- a/keynotes/index.html
+++ b/keynotes/index.html
@@ -149,7 +149,7 @@
                           language processing, computer vision and speech recognition. They found several real world
                           applications, ranging from autonomous vehicles to medical diagnosis. Correspondingly, the need
                           for testing approaches to ensure their dependability and quality has increased.
-                          <br/> <br/>
+                          <br /> <br />
                           In recent years, we have seen an exponential growth in the number of research papers that
                           address various aspects of deep learning testing. In this seminar, I will describe a selected
                           set of core problems in the field. In particular, I will focus on the reasons why such
@@ -184,23 +184,35 @@
                       <div class="team-player">
                         <img src="/img/rgopinath.jpg" alt="Thumbnail Image" class="rounded-circle img-fluid img-raised">
                         <h4 class="title">Rahul Gopinath</h4>
-                        <p class="category text-primary">CISPA Helmholtz Center for Information Security, Germany</p>
+                        <p class="category text-primary">University of Sydney, Australia</p>
                         <p class="category text-primary">Learning and Refining Input Grammars for Effective Fuzzing</p>
                         <!--<p><a href="" target="_blank">» Slides</a></p>-->
+                        <p class="text-justify"><strong>Abstract</strong>:
+                          Fuzzing is one of the key techniques for evaluating robustness of programs against malicious
+                          inputs. To fuzz the program logic effectively, one needs the input specification of the
+                          program under fuzzing. However, such input specifications are rarely available, and even when
+                          present, can be obsolete, incomplete or incorrect leading to fuzzing blind spots. In this
+                          tutorial, I will show how to mine the input specification from a given program from the ground
+                          up, first generating sample inputs, then using such inputs to mine the program input grammar,
+                          and finally using the mined grammar to fuzz the program and find any bugs.
+                          <br><br>
+                          What should you do next once you find a bug? An input pattern rather than a particular input
+                          is likely to result in the bug, and to have any confidence in a bug fix, we should test the
+                          fix using the input pattern rather than a single input. In this talk, I will show how to
+                          abstract such input patterns corresponding to program behaviors such as bugs into a focused
+                          grammar, how to combine multiple input patterns together, and use such patterns to fuzz. The
+                          specialized grammars we generate can be used by any grammar fuzzer for precise control of
+                          produced inputs and hence the expected behavior.
                         <p class="text-justify">
-                          <strong>Abstract</strong>:
-                          TBA
-                        </p>
-                        <p class="text-justify">
-                          <strong>Biography</strong>: Rahul Gopinath is an (incoming) lecturer at the University of
-                          Sydney. He is currently a postdoctoral researcher working on static and dynamic analysis of
-                          software at CISPA Saarland University. He received his Ph.D. in 2017 from the School of EECS
-                          at Oregon State University. He has worked as a postdoctoral scholar at CISPA Helmholtz center
-                          from 2017 onwards. At CISPA, his work is focused on fuzzing software systems. Fuzzing is
-                          essentially about evaluating how a software system responds to unexpected and possibly invalid
-                          inputs. Rahul is one of the authors of the <a href="https://www.fuzzingbook.org/"
-                            target="_blank">Fuzzing Book.</a> He has also worked on empirical evaluation of the
-                          effectiveness of different coverage techniques and Mutation Analysis.
+                          <strong>Biography</strong>: Rahul Gopinath is a lecturer at the University of Sydney,
+                          Australia. He received his Ph.D. in 2017 from the Oregon State University, US. Rahul's
+                          research focus is on static and dynamic analysis of programs, especially mining input
+                          specifications, focused fuzzing, and debugging. He is one of the co-authors of the <a
+                            href="https://www.fuzzingbook.org/" target="_blank">"Fuzzing Book - Tools and Techniques for
+                            Generating Software Tests".</a> Rahul also has extensive industry experience, having worked
+                          in diverse fields such as telco, publishing, systems, and DevOps. He has also worked on
+                          empirical evaluation of the effectiveness of different coverage techniques and Mutation
+                          Analysis.
                         </p>
                       </div>
                     </div>
