--- a/index.html
+++ b/index.html
@@ -149,6 +149,15 @@
                     directions for future research, and to encourage the use of search
                     techniques in novel aspects of software testing in combination with
                     other aspects of the software engineering lifecycle.</p>
+                  <h4 class="subsection">Attending SBST</h4>
+                  <p>
+                    SBST 2022 is co-located with <a href="https://conf.researchr.org/home/icse-2022" target="_blank">ICSE 2022</a>.
+                    However, SBST will be completely online.
+                    <br>
+                    In order to attend SBST, you have to register for our workshop using the official <a href="https://conf.researchr.org/attending/icse-2022/registration" target="_blank">ICSE registration link</a>.
+                    <br>
+                    Once you registered for SBST, you will have access to <b><a href="https://in.midspace.app/conference/icse2022" target="_blank">Midspace</a></b>, the conference meeting platform.
+                  </p>
                   <h4 class="subsection">Special Issue</h4>
                   <p>
                     We are please to announce that SBST'22 is hosting an <b>open call</b> special issue at the <a
@@ -164,7 +173,8 @@
                     for for sake of reproducibility. Hence, we invite submissions showing practical experience of using
                     SBST techniques and tools.
                   </p>
-                  <p>This is the perfect opportunity to showcase your tool. Use the following link for more information and submission instructions:
+                  <p>This is the perfect opportunity to showcase your tool. Use the following link for more information
+                    and submission instructions:
                     <a href="https://www.journals.elsevier.com/science-of-computer-programming/call-for-software/sbst-22-search-based-software-engineering-tools"
                       target="_blank">Science of Computer Programming Call</a>
                   </p>
