Updated attending information

--- a/index.html
+++ b/index.html
@@ -151,12 +151,17 @@
                     other aspects of the software engineering lifecycle.</p>
                   <h4 class="subsection">Attending SBST</h4>
                   <p>
-                    SBST 2022 is co-located with <a href="https://conf.researchr.org/home/icse-2022" target="_blank">ICSE 2022</a>.
+                    SBST 2022 is co-located with <a href="https://conf.researchr.org/home/icse-2022"
+                      target="_blank">ICSE 2022</a>.
                     However, SBST will be completely online.
                     <br>
-                    In order to attend SBST, you have to register for our workshop using the official <a href="https://conf.researchr.org/attending/icse-2022/registration" target="_blank">ICSE registration link</a>.
+                    In order to attend SBST, you have to register for our workshop using the official <a
+                      href="https://conf.researchr.org/attending/icse-2022/registration" target="_blank">ICSE
+                      registration link</a>.
                     <br>
-                    Once you registered for SBST, you will have access to <b><a href="https://in.midspace.app/conference/icse2022" target="_blank">Midspace</a></b>, the conference meeting platform.
+                    Once you registered for SBST, the ICSE team will send you an e-mail with the invitation to attend
+                    the conference through <b><a href="https://in.midspace.app/conference/icse2022"
+                        target="_blank">Midspace</a></b>, the virtual conference meeting platform.
                   </p>
                   <h4 class="subsection">Special Issue</h4>
                   <p>
