Updated the program

--- a/index.html
+++ b/index.html
@@ -163,6 +163,12 @@
                     the conference through <b><a href="https://in.midspace.app/conference/icse2022"
                         target="_blank">Midspace</a></b>, the virtual conference meeting platform.
                   </p>
+                  <p class="paper-title">
+                    <b>Similar to last year, we will also live-stream SBST 2022 via <a
+                            href=" https://www.twitch.tv/koxp"
+                            target="_blank">Twitch</a></b>. Feel free to join our stream
+                    and ask questions in the chat if you are not registered.
+                  </p>
                   <h4 class="subsection">Special Issue</h4>
                   <p>
                     We are please to announce that SBST'22 is hosting an <b>open call</b> special issue at the <a
