--- a/program/index.html
+++ b/program/index.html
@@ -266,30 +266,29 @@
                                 <div class="row">
                                     <table class="program-table">
                                         <tr>
-                                            <td colspan="2">
-                                                <p>SBST22 will be held virtually this year. The format of the workshop
-                                                    will be as follows:
-                                            </td>
-                                        </tr>
-                                        <tr>
                                             <td class="program-details" colspan="2"><b>Authors and registered
                                                     participants</b></td>
                                         </tr>
                                         <tr>
                                             <td class="program-details" colspan="2">
+                                                <p>
+                                                    SBST 2022 is co-located with <a href="https://conf.researchr.org/home/icse-2022"
+                                                      target="_blank">ICSE 2022</a>.
+                                                    However, SBST will be completely online.
+                                                    <br>
+                                                    In order to attend SBST, you have to register for our workshop using the official <a
+                                                      href="https://conf.researchr.org/attending/icse-2022/registration" target="_blank">ICSE
+                                                      registration link</a>.
+                                                    <br>
+                                                    Once you registered for SBST, the ICSE team will send you an e-mail with the invitation to attend
+                                                    the conference through <b><a href="https://in.midspace.app/conference/icse2022"
+                                                        target="_blank">Midspace</a></b>, the virtual conference meeting platform.
+                                                  </p>
                                                 <p class="paper-title">
-                                                    We will use Zoom for SBST2022 for registered participants. To
-                                                    minimize issues during the time of the workshop, we ask that author
-                                                    presentations be <em>pre-recorded</em>. Authors are still welcome to
-                                                    present live.
-                                                </p>
-                                                <br>
-                                                <br>
-                                                <p class="paper-title">
-                                                    <b>Similar to last year, we will also live-stream SBST2022 via <a
+                                                    <b>Similar to last year, we will also live-stream SBST 2022 via <a
                                                             href=" https://www.twitch.tv/koxp"
                                                             target="_blank">Twitch</a></b>. Feel free to join our stream
-                                                    and ask questions in the chat if you did not register.
+                                                    and ask questions in the chat if you are not registered.
                                                 </p>
                                             </td>
                                         </tr>
@@ -346,6 +345,22 @@
                                     <td class="session">Paper Session 1 (2 papers)</td>
                                 </tr>
                                 <tr>
+                                    <td class="sub-time">11:30am - 11:45am </td>
+                                    <td class="sub-session"><a target="_blank">Learning to Rank for Test Case Prioritization</a>
+                                        <br>
+                                        <h3 class="paper-authors-accepted">Safa Omri and Carsten Sinz</h3>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td class="sub-time">11:45am - 11:55am </td>
+                                    <td class="sub-session"><a target="_blank">Wasserstein Generative Adversarial Networks for
+                                        Online Test Generation for
+                                        Cyber Physical Systems</a> <br>
+                                    <h3 class="paper-authors-accepted">Jarkko Peltomäki, Frankie Spencer and
+                                        Ivan Porres</h3>
+                                    </td>
+                                </tr>
+                                <tr>
                                     <td class="time">12:00pm - 1:30pm </td>
                                     <td class="session">Lunch</td>
                                 </tr>
@@ -357,8 +372,27 @@
                                     <td class="session">Paper Session 2 (2 papers)</td>
                                 </tr>
                                 <tr>
+                                    <td class="sub-time">1:30pm - 1:45pm </td>
+                                    <td class="sub-session"><a target="_blank">A Comparative Evaluation on the Quality of Manual and
+                                        Automatic Test Case
+                                        Generation Techniques for Scientific Software - A Case Study of a
+                                        Python Project for Material
+                                        Science Workflows</a> <br>
+                                    <h3 class="paper-authors-accepted">Daniel Trübenbach, Sebastian Müller
+                                        and Lars Grunske</h3>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td class="sub-time">1:45pm - 1:55pm </td>
+                                    <td class="sub-session"><a target="_blank">Towards Run-Time Search for Real-World Multi-Agent
+                                        Systems</a> <br>
+                                    <h3 class="paper-authors-accepted">Abigail Diller and Erik M. Fredericks
+                                    </h3>
+                                    </td>
+                                </tr>
+                                <tr>
                                     <td class="time">2:00pm - 4:00pm </td>
-                                    <td class="session">Discussion Panel</td>
+                                    <td class="session">SBST vs Fuzzing Discussion Panel</td>
                                 </tr>
                                 <tr>
                                     <td class="time">4:00pm - 4:15pm </td>
