--- a/program/index.html
+++ b/program/index.html
@@ -205,7 +205,7 @@
                                         </tr>
                                         <tr>
                                             <td><a target="_blank"
-                                                    href="https://github.com/UnitTestBothttps://github.com/UnitTestBot"><i
+                                                    href="https://github.com/UnitTestBot"><i
                                                         class="fas fa-link"></i> UtBot & UtBot-Mocks</a> <br>
                                                 <h3 class="paper-authors-accepted">Dmitry Ivanov, Alexey Menshutin,
                                                     Denis Fokin, Kamenev Yury, Sergey Pospelov, Egor Kulikov, Nikita
