added slides and videos and fixed some stuff

--- a/index.html
+++ b/index.html
@@ -112,10 +112,10 @@
           <div class="text-center">
             <h5>The 15th Intl. Workshop on Search-Based Software Testing</h5>
             <h5>May 9, 2022, Pittsburgh, PA, USA</h5>
-            <a href="https://www.facebook.com/sbstws/" class="btn btn-primary btn-icon btn-round"><i
-                class="fa fa-facebook-square"></i></a><a href="https://twitter.com/sbstworkshop"
-              class="btn btn-primary btn-icon btn-round"> <i class="fa fa-twitter"></i></a>
-
+            <a href="https://www.facebook.com/sbstws/" class="btn btn-primary btn-icon btn-round"><i class="fa fa-facebook-square"></i></a>
+            <a href="https://twitter.com/sbstworkshop" class="btn btn-primary btn-icon btn-round"> <i class="fa fa-twitter"></i></a>
+            <a href="https://bit.ly/SBST-YT" class="btn btn-primary btn-icon btn-round"> <i class="fa fa-youtube"></i></a>
+ 
           </div>
         </div>
       </div>
@@ -137,6 +137,18 @@
                   <!-- <h4 class="subsection"><a href="https://youtu.be/ZpWOdyySPLo" target="_blank">Our livestream is now available!</a>  Thanks to all who participated!</h4> -->
                   <!-- <h5 class="subsection">SBST2022 will be held via Zoom for participants.  We will also be livestreaming SBST22 via Twitch!</h5> -->
                   <!--<h4 class="subsection"><a href="https://youtu.be/AH0hp7BtLH4" target="_blank">Livestream of SBST20</a></h4>-->
+                  <!-- <h4 class="subsection">SBST'22 Recording</h4> -->
+                  <div class="text-center">
+                  <div class ="iframe-container">
+                  <iframe width="560" height="315" src="https://www.youtube.com/embed/Vwxu6TtzBYs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    </div>
+                    <br>
+                      <a target="_blank"
+                      href="https://drive.google.com/file/d/1J_J7mGk414PlcrvQj6jtUC4CrLzNCn8u/view"><i
+                        class="fa fa-file-pdf-o fa-sm"></i></a>
+                    <a class="slides-title-home" data-height="600"
+                    href="https://www.slideshare.net/sebastianopanichella/searchbased-software-testing-sbst-22">Workshop Slides</a>
+                  </div>
                   <h4 class="subsection">About SBST</h4>
                   <p>Search-Based Software Testing (SBST) is the application of optimizing search techniques (for
                     example, Genetic Algorithms) to solve problems in software testing. SBST is used to generate test
@@ -255,6 +267,7 @@
                   <p><a
                       href="https://easychair.org/conferences/?conf=sbst2022">https://easychair.org/conferences/?conf=sbst2022</a>
                   </p>
+
                   <a class="twitter-timeline" data-height="600"
                     href="https://twitter.com/sbstworkshop?ref_src=twsrc%5Etfw">Tweets by sbstworkshop</a>
                   <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
