--- a/panel/index.html
+++ b/panel/index.html
@@ -114,10 +114,9 @@
                     <div class="text-center">
                         <h5>The 15th Intl. Workshop on Search-Based Software Testing</h5>
                         <h5>May 9, 2022, Pittsburgh, PA, USA</h5>
-                        <a href="https://www.facebook.com/sbstws/" class="btn btn-primary btn-icon btn-round"><i
-                                class="fa fa-facebook-square"></i></a><a href="https://twitter.com/sbstworkshop"
-                            class="btn btn-primary btn-icon btn-round"> <i class="fa fa-twitter"></i></a>
-
+                        <a href="https://www.facebook.com/sbstws/" class="btn btn-primary btn-icon btn-round"><i class="fa fa-facebook-square"></i></a>
+                        <a href="https://twitter.com/sbstworkshop" class="btn btn-primary btn-icon btn-round"> <i class="fa fa-twitter"></i></a>
+                        <a href="https://bit.ly/SBST-YT" class="btn btn-primary btn-icon btn-round"> <i class="fa fa-youtube"></i></a>
                     </div>
                 </div>
             </div>
@@ -133,8 +132,8 @@
 
                         <div class="section section-team text-left">
                             <div class="container">
-                                <h1>Discussion Panel</h1>
-                                <h2 class="subtitle">SBST vs Fuzzing - Intersections and Differences</h2>
+                                <h2 class="text-center">Discussion Panel</h2>
+                                <h4 class="subtitle">SBST vs Fuzzing - Intersections and Differences</h4>
                                 <p class="text-justify">We plan to hold a discussion panel (duration of one hour and a
                                     half long) entitled
                                     "Fuzzing vs SBST - Intersections and Differences".
@@ -149,7 +148,7 @@
                                     industry will be the highlight of SBST'22.</p>
 
                                 <div class="team">
-                                    <h2 class="subtitle">Panellists</h2>
+                                    <h3 class="subtitle">Panellists</h3>
                                     <div class="row">
                                         <div class="col-md-4">
                                             <div class="team-player">
@@ -238,6 +237,14 @@
                                         </div>
                                     </div>
                                 </div>
+                                <div class = "col-sm">
+                                <h3 class="subtitle">Discussion Panel Video</h3>
+                                </div>
+                              
+                                    <div class = "col-sm">
+                                      <div class ="iframe-container">
+                                        <iframe width="560" height="315" src="https://www.youtube.com/embed/OS0-k7WQkus" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>                                    </div>
+                                  </div>
                             </div>
                             <br>
                         </div>
