--- a/tools/index.html
+++ b/tools/index.html
@@ -114,10 +114,10 @@
           <div class="text-center">
             <h5>The 15th Intl. Workshop on Search-Based Software Testing</h5>
             <h5>May 9, 2022, Pittsburgh, PA, USA</h5>
-            <a href="https://www.facebook.com/sbstws/" class="btn btn-primary btn-icon btn-round"><i
-                class="fa fa-facebook-square"></i></a><a href="https://twitter.com/sbstworkshop"
-              class="btn btn-primary btn-icon btn-round"> <i class="fa fa-twitter"></i></a>
-
+            <a href="https://www.facebook.com/sbstws/" class="btn btn-primary btn-icon btn-round"><i class="fa fa-facebook-square"></i></a>
+            <a href="https://twitter.com/sbstworkshop" class="btn btn-primary btn-icon btn-round"> <i class="fa fa-twitter"></i></a>
+            <a href="https://bit.ly/SBST-YT" class="btn btn-primary btn-icon btn-round"> <i class="fa fa-youtube"></i></a>
+ 
           </div>
         </div>
       </div>
@@ -131,8 +131,7 @@
 
         <div class="row">
           <div class="col-md-8 ml-auto mr-auto text-left">
-
-            <h2 class="title">Tool Competition</h2>
+            <h2 class="text-center">Tool Competition</h2>
 
             <p>This year as well we are pleased to announce the tenth edition of the testing tool competition. The
               competition has the goal to experiment with testing tools for a diversified set of traditional and
@@ -194,7 +193,7 @@
                 href="https://github.com/se2p/tool-competition-av"
                 target="_blank">https://github.com/se2p/tool-competition-av</a>.</p>
 
-            <h3>Important Dates</h3>
+            <h3 class = "text-center">Important Dates</h3>
 
             <ul>
               <li>Tool submission: <strong>Friday January 21</strong></li>
