--- a/keynotes/index.html
+++ b/keynotes/index.html
@@ -113,10 +113,10 @@
           <div class="text-center">
             <h5>The 15th Intl. Workshop on Search-Based Software Testing</h5>
             <h5>May 9, 2022, Pittsburgh, PA, USA</h5>
-            <a href="https://www.facebook.com/sbstws/" class="btn btn-primary btn-icon btn-round"><i
-                class="fa fa-facebook-square"></i></a><a href="https://twitter.com/sbstworkshop"
-              class="btn btn-primary btn-icon btn-round"> <i class="fa fa-twitter"></i></a>
-
+            <a href="https://www.facebook.com/sbstws/" class="btn btn-primary btn-icon btn-round"><i class="fa fa-facebook-square"></i></a>
+            <a href="https://twitter.com/sbstworkshop" class="btn btn-primary btn-icon btn-round"> <i class="fa fa-twitter"></i></a>
+            <a href="https://bit.ly/SBST-YT" class="btn btn-primary btn-icon btn-round"> <i class="fa fa-youtube"></i></a>
+ 
           </div>
         </div>
       </div>
@@ -132,7 +132,7 @@
 
             <div class="section section-team text-center">
               <div class="container">
-                <h2 class="title">Keynote Talk</h2>
+                <h2 class="text-center">Keynote Talk</h2>
                 <div class="team">
                   <div class="row">
                     <div class="col-sm">
@@ -174,10 +174,36 @@
                         </p>
                       </div>
                     </div>
+
                   </div>
+                  <div class = "row">
+                    <div class = "col-sm">
+                      <h3 class="text-center">Keynote Video</h3>
+                    </div>
+                  </div>
+                  <div class = "row">
+                    <div class = "col-sm">
+                      <div class ="iframe-container">
+                      <iframe width="560" height="315" src="https://www.youtube.com/embed/xxz5mKnK1wE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    </div>
+                  </div>
+                  </div>
+                  <div class = "row">
+                    <div class = "col-sm">
+                      <br>
+                      <a target="_blank"
+                      href="https://drive.google.com/file/d/1J_J7mGk414PlcrvQj6jtUC4CrLzNCn8u/view"><i
+                        class="fa fa-file-pdf-o fa-lg"></i></a>
+                    <a class="slides-title" data-height="600"
+                    href="https://drive.google.com/file/d/1J_J7mGk414PlcrvQj6jtUC4CrLzNCn8u/view">Keynote Slides</a>
+                      </div>
+                  </div>
+                  
+
+
                 </div>
                 <br><br>
-                <h2 class="title">Tutorial</h2>
+                <h2 class="text-center">Tutorial</h2>
                 <div class="team">
                   <div class="row">
                     <div class="col-sm">
@@ -216,6 +242,17 @@
                         </p>
                       </div>
                     </div>
+                  </div>
+                  <div class = "row">
+                    <div class = "col-sm">
+                      <h3 class="text-center">Tutorial Video</h3>
+                    </div>
+                  </div>
+                  <div class = "row">
+                    <div class = "col-sm">
+                      <div class ="iframe-container">
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/_GFrw1fBUFI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>                    </div>
+                  </div>
                   </div>
                 </div>
               </div>
