--- a/organisation/index.html
+++ b/organisation/index.html
@@ -108,8 +108,10 @@
     <div class="text-center">
        <h5>The 15th Intl. Workshop on Search-Based Software Testing</h5>
 <h5>May 9, 2022, Pittsburgh, PA, USA</h5>
-<a href="https://www.facebook.com/sbstws/" class="btn btn-primary btn-icon btn-round"><i class="fa fa-facebook-square"></i></a><a href="https://twitter.com/sbstworkshop" class="btn btn-primary btn-icon btn-round"> <i class="fa fa-twitter"></i></a>
- 
+<a href="https://www.facebook.com/sbstws/" class="btn btn-primary btn-icon btn-round"><i class="fa fa-facebook-square"></i></a>
+<a href="https://twitter.com/sbstworkshop" class="btn btn-primary btn-icon btn-round"> <i class="fa fa-twitter"></i></a>
+<a href="https://bit.ly/SBST-YT" class="btn btn-primary btn-icon btn-round"> <i class="fa fa-youtube"></i></a>
+
     </div>
   </div>
 </div>
