--- a/program/index.html
+++ b/program/index.html
@@ -118,10 +118,9 @@
                     <div class="text-center">
                         <h5>The 15th Intl. Workshop on Search-Based Software Testing</h5>
                         <h5>May 9, 2022, Pittsburgh, PA, USA</h5>
-                        <a href="https://www.facebook.com/sbstws/" class="btn btn-primary btn-icon btn-round"><i
-                                class="fa fa-facebook-square"></i></a>
-                        <a href="https://twitter.com/sbstworkshop" class="btn btn-primary btn-icon btn-round"> <i
-                                class="fa fa-twitter"></i></a>
+                        <a href="https://www.facebook.com/sbstws/" class="btn btn-primary btn-icon btn-round"><i class="fa fa-facebook-square"></i></a>
+                        <a href="https://twitter.com/sbstworkshop" class="btn btn-primary btn-icon btn-round"> <i class="fa fa-twitter"></i></a>
+                        <a href="https://bit.ly/SBST-YT" class="btn btn-primary btn-icon btn-round"> <i class="fa fa-youtube" aria-hidden="true"></i> </a>
 
                     </div>
                 </div>
@@ -139,9 +138,9 @@
                         <div class="section section-team text-center">
 
                             <div class="container">
-                                <h2 class="subtitle text-center">Accepted Papers & Tools</h2>
+                                <h2 class="text-center">Accepted Papers & Tools</h2>
                                 <div class="table-condensed">
-                                    <h2>Research Track</h2>
+                                    <h2 class="subtitle text-center">Research Track</h2>
                                     <table class="committee-table">
                                         <tr>
                                             <td><a target="_blank">Wasserstein Generative Adversarial Networks for
@@ -176,7 +175,7 @@
                                         </tr>
                                     </table>
 
-                                    <h2>Tool Competition</h2>
+                                    <h2 class="subtitle text-center">Tool Competition</h2>
                                     <table class="committee-table">
                                         <tr>
                                             <td><a target="_blank" href="https://github.com/evosuite/EvoSuite"><i
