--- a/venue/index.html
+++ b/venue/index.html
@@ -108,8 +108,9 @@
     <div class="text-center">
        <h5>The 15th Intl. Workshop on Search-Based Software Testing</h5>
 <h5>May 9, 2022, Pittsburgh, PA, USA</h5>
-<a href="https://www.facebook.com/sbstws/" class="btn btn-primary btn-icon btn-round"><i class="fa fa-facebook-square"></i></a><a href="https://twitter.com/sbstworkshop" class="btn btn-primary btn-icon btn-round"> <i class="fa fa-twitter"></i></a>
- 
+<a href="https://www.facebook.com/sbstws/" class="btn btn-primary btn-icon btn-round"><i class="fa fa-facebook-square"></i></a>
+<a href="https://twitter.com/sbstworkshop" class="btn btn-primary btn-icon btn-round"> <i class="fa fa-twitter"></i></a>
+<a href="https://bit.ly/SBST-YT" class="btn btn-primary btn-icon btn-round"> <i class="fa fa-youtube"></i></a>
     </div>
   </div>
 </div>
@@ -123,8 +124,8 @@
 <div class="row">
   <div class="col-md-8 ml-auto mr-auto text-left">
   
-<h2 class="title">Venue</h2>
-                        <p>SBST'22 will be co-located with <a href="https://conf.researchr.org/home/icse-2022">ICSE'22</a> in Pittsburgh, PA, USA.</p>
+<h2 class="text-center">Venue</h2>
+                        <p class="text-center">SBST'22 will be co-located with <a href="https://conf.researchr.org/home/icse-2022">ICSE'22</a> in Pittsburgh, PA, USA.</p>
                         <!-- <p>For more information, please visit <a href="https://conf.researchr.org/home/icse-2022">https://conf.researchr.org/home/icse-2022</a>.</p><br><br><br><br><br><br> -->
 
   </div>   
