added paper videos

--- a/index.html
+++ b/index.html
@@ -144,11 +144,9 @@
                     </div>
                     <br>
                       <a target="_blank"
-                      href="https://drive.google.com/file/d/1J_J7mGk414PlcrvQj6jtUC4CrLzNCn8u/view"><i
-                        class="fa fa-file-pdf-o fa-sm"></i></a>
-                    <a class="slides-title-home" data-height="600"
-                    href="https://www.slideshare.net/sebastianopanichella/searchbased-software-testing-sbst-22">Workshop Slides</a>
-                  </div>
+                      href="https://www.slideshare.net/sebastianopanichella/searchbased-software-testing-sbst-22"><i
+                        class="fa fa-file-pdf-o fa-sm"></i> Workshop Slides</a>
+                    </div>
                   <h4 class="subsection">About SBST</h4>
                   <p>Search-Based Software Testing (SBST) is the application of optimizing search techniques (for
                     example, Genetic Algorithms) to solve problems in software testing. SBST is used to generate test
