--- a/keynotes/index.html
+++ b/keynotes/index.html
@@ -177,9 +177,9 @@
 
                   </div>
                   <div class = "row">
-                    <div class = "col-sm">
+                    <!-- <div class = "col-sm">
                       <h3 class="text-center">Keynote Video</h3>
-                    </div>
+                    </div> -->
                   </div>
                   <div class = "row">
                     <div class = "col-sm">
@@ -193,10 +193,8 @@
                       <br>
                       <a target="_blank"
                       href="https://drive.google.com/file/d/1J_J7mGk414PlcrvQj6jtUC4CrLzNCn8u/view"><i
-                        class="fa fa-file-pdf-o fa-lg"></i></a>
-                    <a class="slides-title" data-height="600"
-                    href="https://drive.google.com/file/d/1J_J7mGk414PlcrvQj6jtUC4CrLzNCn8u/view">Keynote Slides</a>
-                      </div>
+                        class="fa fa-file-pdf-o fa-lg"></i> Keynote Slides </a>
+                    </div>
                   </div>
                   
 
@@ -244,9 +242,9 @@
                     </div>
                   </div>
                   <div class = "row">
-                    <div class = "col-sm">
+                    <!-- <div class = "col-sm">
                       <h3 class="text-center">Tutorial Video</h3>
-                    </div>
+                    </div> -->
                   </div>
                   <div class = "row">
                     <div class = "col-sm">
