--- a/program/index.html
+++ b/program/index.html
@@ -143,7 +143,8 @@
                                     <h2 class="subtitle text-center">Research Track</h2>
                                     <table class="committee-table">
                                         <tr>
-                                            <td><a target="_blank">Wasserstein Generative Adversarial Networks for
+                                            <td><a target="_blank" href="https://www.youtube.com/watch?v=_8i1wQc3564"><i
+                                                class="fas fa-video-camera fa-ms"></i> Wasserstein Generative Adversarial Networks for
                                                     Online Test Generation for
                                                     Cyber Physical Systems</a> <br>
                                                 <h3 class="paper-authors-accepted">Jarkko Peltomäki, Frankie Spencer and
@@ -151,7 +152,9 @@
                                             </td>
                                         </tr>
                                         <tr>
-                                            <td><a target="_blank">A Comparative Evaluation on the Quality of Manual and
+                                            <td> <a target="_blank"
+                                                href="https://www.youtube.com/watch?v=S-flElJqoiA"><i
+                                                    class="fas fa-video-camera fa-ms"></i> A Comparative Evaluation on the Quality of Manual and
                                                     Automatic Test Case
                                                     Generation Techniques for Scientific Software - A Case Study of a
                                                     Python Project for Material
@@ -161,14 +164,16 @@
                                             </td>
                                         </tr>
                                         <tr>
-                                            <td><a target="_blank">Towards Run-Time Search for Real-World Multi-Agent
+                                            <td><a target="_blank" href="https://www.youtube.com/watch?v=n2KFXG2nv38"><i
+                                                class="fas fa-video-camera fa-ms"></i> Towards Run-Time Search for Real-World Multi-Agent
                                                     Systems</a> <br>
                                                 <h3 class="paper-authors-accepted">Abigail Diller and Erik M. Fredericks
                                                 </h3>
                                             </td>
                                         </tr>
                                         <tr>
-                                            <td><a target="_blank">Learning to Rank for Test Case Prioritization</a>
+                                            <td><a target="_blank" href="https://www.youtube.com/watch?v=njqLS0GCJEQ"><i
+                                                class="fas fa-video-camera fa-ms"></i> Learning to Rank for Test Case Prioritization</a>
                                                 <br>
                                                 <h3 class="paper-authors-accepted">Safa Omri and Carsten Sinz</h3>
                                             </td>
