--- a/tools/index.html
+++ b/tools/index.html
@@ -203,86 +203,9 @@
 
             <div class="section">
               <div class="container">
-
-
-                <!-- <div class="row">
-  <div class="col-md-8 ml-auto mr-auto text-left">
-  
-        <div class="section section-team text-center">
-            <div class="container">
-                <h3 class="subtitle">Organizing Committee</h3>
-                <div class="team">
-                    <div class="row">
-                        <div class="col-md-6">
-                            <div class="team-player">
-                                <img src="/img/sebastiano.png" alt="Thumbnail Image" class="rounded-circle img-fluid img-raised">
-                                <h4>Sebastiano Panichella</h4>
-                                <p class="category text-primary">Zurich University of Applied Science (ZHAW)</p>
-                                <a href="https://spanichella.github.io/" class="btn btn-primary btn-icon btn-round"><i class="fa fa-id-card-o"></i></a>
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="team-player">
-                                <img src="/img/alessio.png" alt="Thumbnail Image" class="rounded-circle img-fluid img-raised">
-                                <h4>Alessio Gambi</h4>
-                                <p class="category text-primary">Passau University, Germany</p>
-                                <a href="https://staff.fim.uni-passau.de/~gambi/" class="btn btn-primary btn-icon btn-round"><i class="fa fa-id-card-o"></i></a>
-                            </div>
-                        </div>
-                      </div>
-                    <div class="row">
-                        <div class="col-md-6">
-                            <div class="team-player">
-                                <img src="/img/fiorella.png" alt="Thumbnail Image" class="rounded-circle img-fluid img-raised">
-                                <h4>Fiorella Zampetti</h4>
-                                <p class="category text-primary">University of Sannio</p>
-                                <a href="https://scholar.google.com/citations?user=-qRba7AAAAAJ&hl=it" class="btn btn-primary btn-icon btn-round"><i class="fa fa-id-card-o"></i></a>
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="team-player">
-                                <img src="/img/vincenzo.png" alt="Thumbnail Image" class="rounded-circle img-fluid img-raised">
-                                <h4>Vincenzo Riccio</h4>
-                                <p class="category text-primary">University of Lugano</p>
-                                <a href="https://search.usi.ch/en/people/39b5978277864981b53183b0c8e7660b/riccio-vincenzo" class="btn btn-primary btn-icon btn-round"><i class="fa fa-id-card-o"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div> -->
-
-
-                <!--
-To participate: <br />
-<ul>
-<li>notify the organizers by sending an email to Xavier Devroey, Sebastiano Panichella, and Alessio Gambi (<a href="mailto:x.d.m.devroey@tudelft.nl,panichella@ifi.uzh.ch,alessio.gambi@uni-passau.de">x.d.m.devroey@tudelft.nl, panichella@ifi.uzh.ch, alessio.gambi@uni-passau.de</a>).</li>
-<li>check out the <a href="https://github.com/JUnitContest/junitcontest">contest infrastructure</a> and make sure your tool works well within the infrastructure.</li>
-</ul>
-
-<p>The competition infrastructure is available on GitHub and can also
-be tried using Docker.  Details can be found at <a
-href="https://github.com/JUnitContest/junitcontest">https://github.com/JUnitContest/junitcontest</a>.
-
-<h3>Important dates</h3>
-<ul>
-<li>Tool submission: February 3
-<li>Benchmark results communicated to authors: February 28
-<li>Submission of camera-ready paper: <strike>March 16</strike> <b style="color:red;">April 7</b>
-</ul>
-<h3>Organization committee</h3>
-<ul>
-<li><a href="http://xdevroey.be/">Xavier Devroey (Chair)</a> - Delft University of Technology, Netherlands</li>
-<li><a href="https://spanichella.github.io/">Sebastiano Panichella</a> - Zurich University of Applied Science (ZHAW), Switzerland</li>
-<li><a href="https://staff.fim.uni-passau.de/~gambi/">Alessio Gambi</a> - Passau University, Germany</li>
-</ul>
--->
-                </p>
-
+                <div class="iframe-container">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/Vwxu6TtzBYs?start=18351" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              </div>
               </div>
             </div>
 
