added Tutorial Slides

--- a/keynotes/index.html
+++ b/keynotes/index.html
@@ -193,7 +193,7 @@
                       <br>
                       <a target="_blank"
                       href="https://drive.google.com/file/d/1J_J7mGk414PlcrvQj6jtUC4CrLzNCn8u/view"><i
-                        class="fa fa-file-pdf-o fa-lg"></i> Keynote Slides </a>
+                        class="fa fa-file-pdf-o fa-lg"></i> Keynote Material </a>
                     </div>
                   </div>
                   
@@ -249,7 +249,12 @@
                   <div class = "row">
                     <div class = "col-sm">
                       <div class ="iframe-container">
-                        <iframe width="560" height="315" src="https://www.youtube.com/embed/_GFrw1fBUFI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>                    </div>
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/_GFrw1fBUFI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>                  
+                        </div>
+                        <br>
+                        <div><a target="_blank"
+                          href="/files/Gopinath-SBST1.pdf"><i
+                            class="fa fa-file-pdf-o fa-lg"></i> Tutorial Material </a></div>
                   </div>
                   </div>
                 </div>
